Grammar and Spelling

--- a/index.html
+++ b/index.html
@@ -73,13 +73,12 @@
                          <div>
                               <h2 class="section-title">Website Updates</h2>
                               <p> 
-                                   <strong>2/1/2023: </strong> I started the Clinical Data pages. I have officially carried over all 
-                                   my learning content. Now I can start to create new content.
+                                   <strong>2/2/2023: </strong> I started doing the Grammar and Spell checking across
+                                   the website. I plan to take a few days to get that part done before adding new content.
                               </p>
                               <p> 
-                                   <strong>1/31/2023: </strong> I consolidated the Investing pages so are the same as the science 
-                                   pages format. I plan to expand the topics later, but this will work for now. Next up will be to
-                                   build out the Clinical Data section.
+                                   <strong>2/1/2023: </strong> I started the Clinical Data pages. I have officially carried over all 
+                                   my learning content. Now I can start to create new content.
                               </p>
                          </div>
                     </section>
