--- a/pages/clinicaldata.html
+++ b/pages/clinicaldata.html
@@ -98,11 +98,11 @@
                               manufacturing of the drug. They will have to do extensive testing and submit all that data to the FDA 
                               for the Investigational New Drug (IND) application. The first studies will be done in human cells. This 
                               will be to establish a proof of concept of how the biology works in the cells. Then they will move to 
-                              animal models. This is often mice and Non Human Primates (NHP). Since the systems in animals are not 
+                              animal models. This is often mice and NonHuman Primates (NHP). Since the systems in animals are not 
                               always exactly the same as humans, not every drug will be tested in both mice and monkeys. Some concepts 
                               like immunology might not be applicable to one of these animals. Once all the animal models are done, 
-                              the company will submit all its data for a IND with the FDA. The FDA will review the data and determine 
-                              if human trials can proceed. Whenever the FDA finds and issue in any stage of clinical development, they will often issue a hold or 
+                              the company will submit all its data for an IND with the FDA. The FDA will review the data and determine 
+                              if human trials can proceed. Whenever the FDA finds an issue in any stage of clinical development, they will often issue a hold or 
                               partial hold on that program along with a Complete Response Letter (CRL). This letter will request more 
                               information on topics of concern. 
                          </p>
@@ -113,7 +113,7 @@
                               the human body and any side effects it might cause. In non life threatening diseases, this is done in 
                               healthy volunteers. In diseases like cancer, they will test in patients with the disease. The first 2 
                               studies are the SAD (Single Ascending Dose) and MAD (Multiple Ascending Dose) studies. This is where 
-                              they test multiple doses across groups of patients to see how each dose responds. You might hear of the 
+                              they test multiple doses across groups of patients to see each dose responde. You might hear of the 
                               phase 1a and phase1 b studies. The phase 1a is all about the dose escalation and safety. The phase 1b is about finding 
                               the right dose to move to phase 2. This might include expanding the patients tested at some doses that 
                               seem to have the best responses.
@@ -136,28 +136,28 @@
                               After a successful efficacy study in phase 2, the drug will proceed to phase 3. The phase 3 is designed 
                               to test this drug vs the current standard of care. The phase 3 is the hardest as it has to prove the 
                               drug actually improves outcomes for patients vs what they might be taking now. If the standard of care is
-                              Chemo + PD1, then the study might be Study Drug + PD1 + Chemo vs PD1 + Chemo alone. The phase 3 has to 
+                              Chemo + PD1, then the study might be Study Drug + PD1 + Chemo vs PD1 + Chemo alone. Phase 3 has to 
                               prove the drug can improve the standard of care. This might only be for a small population of patients 
                               with a disease. Sometimes a drug can improve outcomes for patients with a specific form of the disease or 
-                              a specific mutation of a cancer. If the phase 3 is successful, then company will file for a New Drug 
+                              a specific mutation of a cancer. If phase 3 is successful, then the company will file for a New Drug 
                               Application (NDA). 
                          </p>
                          <p>
                               The FDA will take 60 days to look over the package and then accept or decline it.
-                              A normal review takes 10 months. If the drug gets and expedited review, then it only takes 6 months. 
+                              A normal review takes 10 months. If the drug gets an expedited review, then it only takes 6 months. 
                               Some statuses issued by the FDA can speed up the process for review to the 6 months time point like 
                               fast track designation. Once accepted, they will issue a PDUFA (Prescription Drug User Fee Act) date 
                               by which they will issue a ruling. Sometimes, a drug will need what they call a Post Marketing Study 
                               or a phase 4 study. This is usually a long term follow up study to ensure long term safety or efficacy. 
-                              Its not very often you will see these studies, but its important to know they exist if you see one.
+                              It is not very often you will see these studies, but it is important to know they exist if you see one.
                          </p>
                          <p>
-                              The main keys to seeing a good trial design is that it has only 1 variable between the group with 
+                              The main key to seeing a good trial design is that it has only 1 variable between the group with 
                               the study drug and the control group. Some studies do not use a control group. This usually 
-                              happens in very bad disease where it would be unethical to use a control group. That is usually 
+                              happens in very bad diseases where it would be unethical to use a control group. That is usually 
                               when they compare data to historical data they know from the history of the disease. A blinded 
-                              study means the doctors and patients don't get to know who is on study drug and who is on placebo.
-                              Open label means both the patients and doctors get to know who is on drug. These can be used to 
+                              study means the doctors and patients don't get to know who is on the study drug and who is on placebo.
+                              Open label means both the patients and doctors get to know who is on the study drug. These can be used to 
                               explore an indication. Some studies will undergo a Blinded Independent Central Review (BICR) by 
                               a panel of doctors who don't get to see anything but the data.
                          </p>
@@ -170,18 +170,18 @@
                               The p value is a measure of statistical probability. We use this in clinical trials to determine if the 
                               data we are seeing is from the trial we designed or if it could have happened by random chance. This is 
                               not a measure of how well a drug works. That is called clinical significance. The statistical 
-                              significance is a measure of the quality of the data. I can demonstrate this by using and example as the 
+                              significance is a measure of the quality of the data. I can demonstrate this by using an example as the 
                               math behind it can be complicated.
                          </p>
                          <p>
                               If you have a quarter, and you flip it 5 times, you might expect to get 50% heads and 50% tails. Let 
                               us assume you flip it and get 4 heads and 1 tail. Is this a valid outcome? First thing we will realize 
                               is that flipping the coin 5 times probably isn't a good sample size. Just one flip accounts for 20% of 
-                              the count. If we do it again and flip the coin 1,000 times, we might expect 500 head and 500 tails. Now 
+                              the count. If we do it again and flip the coin 1,000 times, we might expect 500 heads and 500 tails. Now 
                               let us say we get 495 heads and 505 tails. Is this within the realm of statistical probability? That is 
-                              where the p value comes in. This tell us if the data we collected was valid or if it could have been 
+                              where the p value comes in. This tells us if the data we collected was valid or if it could have been 
                               just random chance. For example, let us say we got 400 heads and 600 tails. Now, we might suspect the 
-                              data we got was some how flawed. Maybe our coin was bent and threw off the outcomes. The p value is 
+                              data we got was somehow flawed. Maybe our coin was bent and threw off the outcomes. The p value is 
                               about measuring the quality of the data in a clinical trial.
                          </p>
                          <p>
@@ -190,7 +190,7 @@
                               value = .051, that trial will be considered a failure as the data is untrustworthy and could have been 
                               due to random chance. Many times you will see a p value like p = .0001 which is just a faction of a 
                               percent chance that the data was by random chance. A lot of investors focus on this p value in a clinical 
-                              trial as it measure the quality of the trial design. Its a good indicator, but its not the only measure 
+                              trial as it measures the quality of the trial design. It is a good indicator, but it is not the only measure 
                               of clinical success. You can be 100% sure of the data you see, but the data is still a failure because it 
                               is not clinically meaningful. 
                          </p>
@@ -198,7 +198,7 @@
                               Another measure used in some clinical trials is a Hazard Ratio (HR). This is the measure of risk between two 
                               events happening. This is often used to compare the possible risk reduction between two therapies. It is 
                               also read as a percentage. A HR ration of 1 means that the outcomes of both events were equal. If the HR 
-                              ratio is above 1 then the study drug is doing worse that what it is being compared to. If the HR ratio is 
+                              ratio is above 1 then the study drug is doing worse than what it is being compared to. If the HR ratio is 
                               less than 1, then the study drug has lowered the risk. You might see HR = .7 in a clinical trial. That 
                               means the risk was lowered by 30% from 1 to .7. Not every trial will have a HR ratio, but it is important 
                               to understand how to read it when you see one in trial data.
@@ -211,7 +211,7 @@
                          <h2 class="section-title" id="recist">RECIST Response Rates</h2>
                          <p>     
                               When we deal with solid tumors, we use the Response Evaluation Criteria In Solid Tumors (RECIST 1.1) 
-                              standard to evaluate responses. The data shows that 90% of tumors are solid tumor and 10% are liquid 
+                              standard to evaluate responses. The data shows that 90% of tumors are solid tumors and 10% are liquid 
                               tumors which use a different set of criteria. It is important to understand the RECIST criteria for 
                               solid tumors. 
                          </p>
@@ -220,12 +220,12 @@
                               something similar. They will actually measure the size of the tumor in centimeters. On the next 
                               scan, they will measure again and the change will be the response. Let us say they scan the tumor 
                               and its 5cm. Then they do a regimen of treatment and scan again. The tumor is now 4.8cm. That means 
-                              that tumor shrank .2 cm. The math would be 5cm – 4.8cm / 5cm =  or .2 / 5cm = .04 or 4% decrease in 
+                              that the tumor shrank .2 cm. The math would be 5 cm minus 4.8 cm / 5 cm =  or .2 / 5 cm = .04 or 4% decrease in 
                               the tumor size. One thing to know about RECIST responses is they tend to be backward. When the 
                               tumor shrinks, the response is positive so a 4% smaller tumor is actually a +4% response. When the 
-                              tumor gets bigger, you have a negative response. So if the tumor grew from 5cm to 5.2cm, the 
+                              tumor gets bigger, you have a negative response. So if the tumor grew from 5 cm to 5.2 cm, the 
                               response would be -4%. The one exception to these criteria is the appearance of new lesions or 
-                              tumors. It wont matter how much the measure tumor shrinks if a new lesion or tumor pops up on the 
+                              tumors. It won't matter how much the measured tumor shrinks if a new lesion or tumor pops up on the 
                               scan. That is immediately treated as Progressive Disease. 
                          </p>
                          <p>
@@ -233,7 +233,7 @@
                               means no detectable tumor or lesion can be seen on the scan. That doesn't mean it is 100% gone. It just
                               means it is now too small to be seen on the scans. We consider that a complete response to that therapy. 
                               The next response is a Partial Response (PR). That is where the tumor has shrunk +30% or more. That means
-                              our 5cm tumor would have to shrink to about 3.5cm to reach a 30% reduction. The next response is called 
+                              our 5 cm tumor would have to shrink to about 3.5 cm to reach a 30% reduction. The next response is called 
                               Stable Disease (SD). Anything from a +30% response to a -20% growth in the tumor is considered stable 
                               disease. Progressive Disease (PD) is anything over -20% where the tumor has grown bigger than 20%. 
                          </p>
@@ -245,10 +245,10 @@
                               you only care about ORR.
                          </p>
                          <p>
-                              You can calculate to ORR from the data if it is not presented for you. Let us say you see a trial 
+                              You can calculate an ORR from the data if it is not presented for you. Let us say you see a trial 
                               where they enrolled 40 patients. They only had 20 patients eligible for a readout at the time of the 
                               data collection. Of those 20 patients, we see 2 CR, 5 PR, 5 SD and 8 PD. We know how each of these rates 
-                              are calculate so we just plug in the numbers. The CR is 2 + the PR is 5 = 7 total patients had a response 
+                              are calculated so we just plug in the numbers. The CR is 2 + the PR is 5 = 7 total patients had a response 
                               out of 20 which is 7/20 = 35% ORR. If a company tries to report a CBR rate which looks impressive, we can 
                               adjust the CBR, for example, the the CBR of 2 CR + 5 PR + 5 SD = 12 out of 20 patients for a CBR rate of 
                               60%. That looks much more impressive, but if we do the math ourselves and calculate the ORR we will see 
