--- a/pages/companies.html
+++ b/pages/companies.html
@@ -67,9 +67,9 @@
 
                          <p class="large-text">
                               This section of the site is about all the companies behind the areas of innovation that are driving 
-                              biotech forward. These are the companies that could be driving the next big breakthroughs in the science. 
+                              biotech forward. These are the companies that could be driving the next big breakthroughs in science. 
                               Many of them will most likely fail. The failure rate in biotechnology is over 90%. I think that is what 
-                              appeals to me as an investors in biotechnology. It is the treasure hunt of finding the next big breakthrough 
+                              appeals to me as an investor in biotechnology. It is the treasure hunt of finding the next big breakthrough 
                               company. I will cover the companies. I will profile each company with assessments of the company, science, 
                               pipeline and valuation. This section will be the most opinionated part of this website. This will be my 
                               thoughts and impressions based on my experience in investing in the biotech space. I will also disclose that 
