--- a/pages/innovation.html
+++ b/pages/innovation.html
@@ -60,12 +60,12 @@
 
                <section class="container">
                     <h2 class="section-title">
-                         Innovation in the Biotech Space</a>
+                         Innovation in the Biotech Space
                     </h2>
 
                     <p class="large-text">
                        This section is about the discovery and the tracking of science in the biotechnology industry that is 
-                       leading the innovation of the future. Here I will look at the technologies driving the science forward.
+                       leading the innovation of the future. Here I will look at the technologies driving science forward.
                        This is about finding the cutting edge of science around Genetics, Immunology and Oncology. Those are the 
                        areas I focus on. These will be just my opinions and ideas. The innovation section is designed to give ideas for
                        investors as a jumping off point. I don't know if all of these areas of innovation will work out. Sometimes
@@ -92,7 +92,7 @@
                <section class="container"  id="techbio">
                     <h2 class="section-title">TechBio</h2>
                     <p class="large-text">
-                          This area on innovation is all about bringing technology
+                          This area of innovation is all about bringing technology
                          into biotechnology. The high cost of drug prices is driven by the high cost of
                          drug discovery. The statistics show that a drug can cost well over $1 billion to
                          develop and 90% of the drugs that enter phase 1 fail. The high cost comes from 
@@ -107,7 +107,7 @@
                          of success. This can significantly reduce cost and improve rates of success. The use of 
                          AI can also be used to take genetic and biological data and make connections between
                          mechanisms of biology and genetics that we may never have thought of before. This can open 
-                         up new potential breakthroughs in diseases that have been hard to crack like Alzheimer's 
+                         up new potential breakthroughs in diseases that have been hard to crack like Alzheimer's. 
                          The future of biotechnology will belong to the companies that embrace these new technologies.
                          Technology can improve the ability of companies to make drugs cheaper and with higher
                          rates of success. This could significantly reduce drug cost over the long term.
@@ -121,7 +121,7 @@
                          CRISPR is a gene editing tool which can revolutionize the way we treat genetic diseases 
                          and completely create new ways to take on other diseases like cancer. It offers a low cost, easy to use, and very
                          powerful set of tools to alter the DNA. Since its discovery, it has already completely
-                         changed the landscape of biotechnology. This gives us the ability to rewrite the human
+                         changed the landscape of biotechnology. This gives us the ability to rewrite human
                          code. We can build therapies using cells by reprogramming them. We can knock out 
                          genes that cause harm. We can insert new genes and replace a lost gene. We can fix a gene
                          that has a mutation. The biggest benefit from CRISPR will be what it can do in cell engineering.
@@ -142,13 +142,13 @@
                          The demand for DNA sequencing is expected to more than triple over the next decade. We are in a new world of
                          gene sequencing and the race for an end to end sequencing system has begun. The desire to push down the cost 
                          of sequencing will continue to drive demand. There is a ton of growth demand from areas like Genetic Disease, Women's 
-                         Health and Oncology. The need for testing in Oncology drives a dominante share of testing. Targeted Therapies, 
+                         Health and Oncology. The need for testing in Oncology drives a dominant share of testing. Targeted Therapies, 
                          Personalized Cancer vaccines and Minimal Residual Disease are driving an explosion of demand for genetic sequencing. 
-                         The sequencing market is split into short and long reads. There is a lot of room for companies to innovating in both 
+                         The sequencing market is split into short and long reads. There is a lot of room for companies to innovate in both 
                          these segments. The ability to collect genomic information on patients will bring about the era of personalized 
                          medicine where genetic sequencing informs treatment. Genomic databases can connect researchers with new therapies 
-                         to patient in need of those therapies. Access to the population level genetic data from these data bases can 
-                         inform researchers where new treatmenst are needed.
+                         to patients in need of those therapies. Access to the population level genetic data from these databases can 
+                         inform researchers where new treatments are needed.
                     </p>
                     <p class="top-link"><a href="#top">Top</a></p>
                </section>
@@ -178,7 +178,7 @@
                          factors which remodel the DNA of the cells and turn them back into the stem cells state. For
                          a long time this technology really had no purpose. Then along came CRISPR gene editing and
                          everything changed. The ability to take these stem cells produced by iPSC and edit them using
-                         CRIPR opened up endless possibilities. We can now engineer stem cells that can advance down
+                         CRISPR opened up endless possibilities. We can now engineer stem cells that can advance down
                          any cell lineage to create all kinds of therapies. One such example is creating new islet cells
                          for Diabetes. This science is now in its infancy and the possibilities are endless. Someday, we 
                          will be able to take sample cells from a patient and create whole organs from iPSC cells by guiding
