--- a/pages/science.html
+++ b/pages/science.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
      <head>
-          <title>Learn About the Science behind Biotech with Genetics, Immunology and Oncology</title>
+          <title>Learn About the Science behind Biotech</title>
 
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -64,7 +64,7 @@
                     </h2>
 
                     <p class="large-text">
-                         This section is about the science behind the companies. I love learning about the science, and I love 
+                         This section is about the science behind the companies. I love learning about science, and I love 
                          teaching others about science. This section will include everything educational about topics like Hematology, 
                          Immunology, Genetics and Oncology. I plan to keep adding new science topics over time. This is a learning 
                          resource. It is not necessary to know the science to be a biotechnology investor, but it really helps. I 
